# kepler-metal-ci

./: README.md
.github/: dependabot.yml
ansible/: README.md  append_daily_validations.yml  cloud-init-script.sh  deploy_http_model_server.yml  docker_setup.yml  inventory.ini  inventory.yml  k8s-gpu-benchmark.yml  k8s-nvidia-gpu-operator.yml  k8s_kubeadm.yml  k8s_kubeadm_extra_vars.yaml  kepler_compose.yml  kepler_dev_compose_playbook.yaml  kepler_openmetrics.yml  kepler_playbook.yml  kepler_restart.yml  kepler_validator.yml  kepler_vm_logs.yml  kvm_playbook.yml  mask_ip_callback.py  metal_prometheus.yml  metrics_playbook.yml  model_server_playbook.yml  model_server_restart.yml  model_trainer_playbook.yml  node_exporter_playbook.yml  ssh_tunnel_playbook.yml  (+2 more)
docs/analytics/: README.md  data_kepler_analytics.ipynb  kepler_analytics.py  pyproject.toml  requirements.txt  vm-cpu-time-predict-vm-power.ipynb
docs/analytics/2024-08-19/: kepler_report.html
docs/analytics/2024-08-20/: kepler_report.html
docs/analytics/2024-08-21/: kepler_report.html
docs/analytics/2024-08-22/: kepler_report.html
docs/analytics/2024-08-23/: kepler_report.html
docs/analytics/2024-08-24/: kepler_report.html
docs/analytics/2024-08-25/: kepler_report.html
docs/analytics/2024-08-26/: kepler_report.html
docs/analytics/2024-08-27/: kepler_report.html
docs/analytics/2024-08-28/: kepler_report.html
docs/analytics/2024-08-29/: kepler_report.html
docs/analytics/2024-08-30/: kepler_report.html
docs/analytics/2024-08-31/: kepler_report.html
docs/analytics/2024-09-01/: kepler_report.html
docs/analytics/2024-09-02/: kepler_report.html
docs/analytics/2024-09-04/: kepler_report.html
docs/analytics/2024-09-05/: kepler_report.html
docs/analytics/2024-09-06/: kepler_report.html
docs/analytics/2024-09-07/: kepler_report.html
docs/analytics/2024-12-28/: kepler_report.html
docs/analytics/src/kepler_analytics/: __main__.py
docs/analytics/src/kepler_analytics/cli/: __init__.py  analytics.py
(+11716 files in other folders)
