[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kepler_analytics"
dynamic = ["version"]
description = 'kepler-analytics'
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
  { name = "Sunil Thaha", email = "sthaha@redhat.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
	# jupyter-lab
	"jupyterlab",
	"notebook",
	"voila",
	# vim please
  "jupyterlab-vim",

	"ipywidgets",

	# for data science 
  "click",
	"pandas",
	"numpy",
	"scikit-learn",
	"beautifulsoup4",
	"requests",

	# read parquet files
	"pyarrow",

  # graphing
	"matplotlib",
	"graphviz",
]

[project.urls]
Documentation = "https://github.com/kepler-metal-ci/kepler-analytics#readme"
Issues = "https://github.com/sthaha/kepler-analytics/issues"
Source = "https://github.com/sthaha/kepler-analytics"

[project.scripts]
kepler-analytics = "kepler_analytics.cli.analytics:main"

[tool.hatch.version]
path = "src/kepler_analytics/__about__.py"

[tool.hatch.envs.default.scripts]
lab = "jupyter lab"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/analytics tests}"

[tool.coverage.run]
source_pkgs = ["kepler_analytics", "tests"]
branch = true
parallel = true
omit = [
  "src/kepler_analytics/__about__.py",
]

[tool.coverage.paths]
analytics = ["src/kepler_analytics", "*/kepler_analytics/src/kepler_analytics"]
tests = ["tests", "*/kepler_analytics/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 120
